# quant_backtrader

./: .gitignore  AUTO_TRADING_GUIDE.md  COMPLETE_GUIDE.md  DEMO.py  INTRADAY_TRADING_PLAN.md  P0_3_COMPLETION_SUMMARY.py  P1-1_COMPLETION_REPORT.md  P1-1_COMPLETION_SUMMARY.md  P1-2_DETAILED_PLAN.md  P1_DEVELOPMENT_PLAN.py  QUICKSTART.md  QUICK_START_SIMPLE.md  README.md  README_backup.md  SYSTEM_COMPLETION_REPORT.md  UNIFIED_DATA_MIGRATION.md  WATCHLIST_WEB_INTEGRATION_REPORT.md  WEB_ARCHITECTURE_REPORT.md  analyze_hwm_only.py  analyze_mstr.py  backtest_framework_test_report.md  broker_integration_guide.md  data_sources.json  debug_monitor.py  demo_realtime.py  final_validation_test.py  framework_improvement.py  framework_improvement_report.md  intraday_test_results.json  live_trading_config.json  main.py  performance_report_test.md  portfolio_manager.py  production_data_sources.json  production_risk_config.py  project_summary.py  pyproject.toml  quant_trading_system_plan.md  quick_screen.py  quick_start.py  (+16 more)
.github/: copilot-instructions.md
core/: backtest_manager.py  data_stream_integration.py  ml_integration.py  ml_signal_prediction.py  paper_trader.py  performance_monitor.py  quick_trade.py  realtime_data_engine.py  realtime_signal_integration.py  risk_engine_integration.py  strategy_config.py  strategy_signal_fusion.py
docs/: API_REFERENCE.md  COMMAND_REFERENCE.md  Dynamic_Stock_Screener_Upgrade_Report.md  Enhancement_Roadmap.md  Final_Multi_Dimensional_Report.md  Four_Dimension_Upgrade_Report.md  HIGH_FREQUENCY_TRADING_COMPLETE_GUIDE.md  HIGH_FREQUENCY_TRADING_GUIDE.md  MACD_Enhancement_Summary.md  Multi_Dimensional_Enhancement_Report.md  P1-2_USER_MANUAL.md  QUICK_START.md  USER_GUIDE_COMPLETE.md  WATCHLIST_GUIDE.md
examples/: complete_enhanced_backtest.py  comprehensive_performance_test.py  crypto_trading.py  debug_bb_macd_test.py  debug_enhanced_strategy.py  dynamic_screener_demo.py  enhanced_backtest_demo.py  (+35 more)
(+88 files in other folders)
